--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+Do not imagine, comrades, that leadership is a pleasure! On the contrary, it is a deep and heavy 
+responsibility.
+‘ALL ANIMALS ARE EQUAL, BUT SOME ANIMALS ARE MORE EQUAL THAN OTHERS’
+E è ç ê û î ô ù . , ، / \ ! ? ؟ أ إ آ [ ] { } ( ) N° 
+إعالم آلــــــي 
 𝐹𝑇 ∶ 𝑃 → ⋃Φ(𝑇𝑦𝑝𝑒(𝑝)
 𝑝∈𝑃
-× ℋ ∪ {𝐶∅}
+× ℋ ∪ {𝐶∅})
+Bois. Légèreté : 44 kg/m3
+à Cuba.
+بالنسبة للصناعة، فالرجل عمل في جوجل، هو مؤسس مشروع (Brain Google .(عمل في Baidu كان Scientist Chief 
+هو أي ًضا مؤسس Coursera ،وعضو مجلس إدارة في شركة للسيارات ذاتية القيادة (ai.drive (وشركة أخرى لروبوتات المحادثة من 
+، وها هو يعلن عن تأسيس شركة جديدة تهتم بتطبيقات الذكاء االصطناعي في مجال التصنيع، وتحديداً أجل الصحة النفسي ة (io.woebot(
+الفحص البصري للمنتجات.
